Fixed a bug that caused 0-value points on the stats page plots to appear below the axis. Fixed a bug where, if the page was too small, the statistics overview link would disappear

--- a/almostSignificant/static/almostSignificant/css/dataDB_main_details.css
+++ b/almostSignificant/static/almostSignificant/css/dataDB_main_details.css
@@ -30,7 +30,7 @@ padding:0;
 	float:left;
 	overflow:hidden;
 	height: 100%;
-	width: 10%;
+/*	width: 10%;
 /*	border-right: 1px solid #4a4a4a;
 	border-top: 1px solid #4a4a4a; */
 	padding-top: 2px;
